change some blogs

--- a/_posts/2018-10-15-redis简单操作.md
+++ b/_posts/2018-10-15-redis简单操作.md
@@ -1,11 +1,11 @@
 ---
 title: redis常用操作
-description: redis的常用操作及python操作redis
 date: 2018-10-15
 author: Pyrans
 categories: 数据库
 tags:
     - redis
+    - python
 ---
 
 ## Ubuntu系统下安装Redis
@@ -84,7 +84,7 @@ tags:
 
 
 
-## PyCharm连接Redis
+## python连接Redis
 	import redis
 	
 	redisClient = redis.StrictRedis(host='localhost', port=6379, password="root")
