change my blogs

--- a/_posts/2018-11-20-migrate&数据相关&分页.md
+++ b/_posts/2018-11-20-migrate&数据相关&分页.md
@@ -3,7 +3,8 @@ title: 迁移&数据相关&分页
 description: 命令行执行迁移&数据相关&分页
 date: 2018-11-20
 author: Pyrans
-categories: 框架
+categories: 
+	- 框架
 tags:
     - flask
 ---
