--- a/_posts/2018-11-22-celery&邮件发送.md
+++ b/_posts/2018-11-22-celery&邮件发送.md
@@ -3,9 +3,10 @@ title: celery&邮件发送
 description: celery的使用及邮件的发送
 date: 2018-11-22
 author: Pyrans
-categories: 框架
+categories: 
+	- 框架
 tags:
-- flask
+	- flask
 ---
 
 
