--- a/_posts/2018-10-13-mysql的基本操作.md
+++ b/_posts/2018-10-13-mysql的基本操作.md
@@ -3,7 +3,8 @@ title: mysql安装及基本操作
 description: mysql常用指令
 date: 2018-10-13
 author: Pyrans
-categories: 数据库
+categories: 
+	- 数据库
 tags:
     - mysql
 ---
