--- a/_posts/2018-10-13-mysql表间关系.md
+++ b/_posts/2018-10-13-mysql表间关系.md
@@ -3,7 +3,8 @@ title: mysql的表间关系
 description: mysql表之间的联系
 date: 2018-10-13
 author: Pyrans
-categories: 数据库
+categories: 
+	- 数据库
 tags:
     - mysql
 ---
