--- a/_posts/2018-10-15-redis简单操作.md
+++ b/_posts/2018-10-15-redis简单操作.md
@@ -3,7 +3,8 @@ title: redis常用操作
 description: redis的常用操作及python操作redis
 date: 2018-10-15
 author: Pyrans
-categories: 数据库
+categories: 
+	- 数据库
 tags:
     - redis
 ---
