--- a/_posts/2018-11-17-flask入门.md
+++ b/_posts/2018-11-17-flask入门.md
@@ -3,7 +3,8 @@ title: flask简单操作
 description: flask介绍，蓝图，route规则以及反向解析
 date: 2018-11-17
 author: Pyrans
-categories: 框架
+categories: 
+	- 框架
 tags:
     - flask
 ---
