change my blogs

--- a/_posts/2018-11-22-restful&单例.md
+++ b/_posts/2018-11-22-restful&单例.md
@@ -3,10 +3,9 @@ title: restful api&单例设计模式
 description: 使用restful设计api,认识单例设计模式
 date: 2018-11-22
 author: Pyrans
-categories: 
-	- 框架
+categories: 框架
 tags:
-	- flask
+- flask
 ---
 
 
