--- a/_posts/2018-10-14-mongodb的操作.md
+++ b/_posts/2018-10-14-mongodb的操作.md
@@ -1,8 +1,7 @@
 ---
 title: mongodb安装及基本操作
 date: 2018-10-14
-categories:
-	- 数据库
+categories: 数据库
 author: Pyrans
 description: mongodb的常用操作
 tags:
